--- a/Pages/CadreDeVie.html
+++ b/Pages/CadreDeVie.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Cadre de vie Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
-		
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	</head>
 	
 	<body>
@@ -38,8 +38,40 @@
 		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> La structure laboratoire BTS</h2>
 		<p>
 		Le laboratoire BTS est un lieu exclusivement réservé au personnel membre du BTS. Il y est possible de s'y rendre en dehors des heures de cours, pour travailler, surfer sur internet, ou tout simplement se retrouver. Tout le matériel nécessaire à la bonne formation de l'étudiant est mis à sa disposition. Le bâtiment est divisé en deux zones, une pour les cours et devoirs, une pour les travaux pratiques.<br /><br />
-		<img src="../Images/labo.jpg" alt="Photo du labo BTS" />&nbsp;<img src="../Images/labo2.jpg" alt="Photo du labo BTS" /> <br />
-		<img src="../Images/labo3.jpg" alt="Photo du labo BTS" />&nbsp;<img src="../Images/labo4.jpg" alt="Phoyo du labo BTS" />
+			<div id="carousel" class="carousel slide" data-ride="carousel">
+				<!-- Indicateurs -->
+				<ul class="carousel-indicators">
+					<li data-target="#demo" data-slide-to="0" class="active"></li>
+					<li data-target="#demo" data-slide-to="1"></li>
+					<li data-target="#demo" data-slide-to="2"></li>
+					<li data-target="#demo" data-slide-to="3"></li>
+				</ul>
+
+						<!-- le carousel -->
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+							<img src="../Images/labo.jpg" alt="Photo du labo BTS" />
+					</div>
+					<div class="carousel-item">
+							<img src="../Images/labo2.jpg" alt="Photo du labo BTS" />
+					</div>
+					<div class="carousel-item">
+							<img src="../Images/labo3.jpg" alt="Photo du labo BTS" />
+					</div>
+					<div>
+							<img src="../Images/labo4.jpg" alt="Photo du labo BTS" />
+					</div>
+				</div>
+					
+					<!-- Left and right controls -->
+					<a class="carousel-control-prev" href="#carousel" data-slide="prev">
+							<span class="carousel-control-prev-icon"></span>
+						</a>
+						<a class="carousel-control-next" href="#carousel" data-slide="next">
+							<span class="carousel-control-next-icon"></span>
+					</a>
+				</div>
+			</div>
 		</p>
 
 		</div>
@@ -51,7 +83,11 @@
 			?>-->
 		</span></p>
 		</div>
-		
+
+		<!-- Latest compiled and minified JQuery -->
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<!-- Latest compiled and minified Bootstrap JS -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 	</body>
 	
 </html>
