charousel (non fini)

--- a/Pages/CadreDeVie.html
+++ b/Pages/CadreDeVie.html
@@ -58,7 +58,7 @@
 					<div class="carousel-item">
 							<img src="../Images/labo3.jpg" alt="Photo du labo BTS" />
 					</div>
-					<div>
+					<div class="carousel-item">
 							<img src="../Images/labo4.jpg" alt="Photo du labo BTS" />
 					</div>
 				</div>
