carrousels cadre de vie (fini)

--- a/Pages/CadreDeVie.html
+++ b/Pages/CadreDeVie.html
@@ -28,7 +28,7 @@
 		<p> 
 		Le Lycée Raymond Queneau d'Yvetot est un établissement jeune : les premières classes de seconde Générale ont été ouvertes en septembre 1988, en complément des classes d'enseignement professionnel qui préexistaient.<br /><br />
 		A la rentrée 2015, le lycée héberge environ 1468 élèves dont 1039 demi-pensionnaires et 53 internes (28 filles et 25 garçons).Le nombre maximum de place est de 60 (30 filles et 30 garcons).<br /><br />
-		<img src="../Images/lycee1.jpg" alt="Photo du lycée" />&nbsp;<img src="../Images/lycee2.jpg" alt="Photo du lycée" /> <br /><br />
+		<img src="../Images/lycee1.jpg" height="225" alt="Photo du lycée" />&nbsp;<img src="../Images/lycee2.jpg" height="225" alt="Photo du lycée" /> <br /><br />
 		Une grande majorité des effectifs est constituée par les élèves du lycée général et technologique.<br /><br />
 		Le lycée Raymond Queneau est situé dans une zone semi-rurale, démographiquement dynamique, caractérisée par une population jeune et fortement ouvrière. <br /><br />
 		Situé entre une zone industrielle et un hypermarché qui représentent des pôles d'attraction naturels pour les lycéens ; cette situation pose la question de la gestion des heures libres entre les cours.<br /><br />
@@ -38,7 +38,8 @@
 		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> La structure laboratoire BTS</h2>
 		<p>
 		Le laboratoire BTS est un lieu exclusivement réservé au personnel membre du BTS. Il y est possible de s'y rendre en dehors des heures de cours, pour travailler, surfer sur internet, ou tout simplement se retrouver. Tout le matériel nécessaire à la bonne formation de l'étudiant est mis à sa disposition. Le bâtiment est divisé en deux zones, une pour les cours et devoirs, une pour les travaux pratiques.<br /><br />
-			<div id="carousel" class="carousel slide" data-ride="carousel">
+		</p>	
+		<div id="carousel" class="carousel slide" data-ride="carousel" style="height: -4%">
 				<!-- Indicateurs -->
 				<ul class="carousel-indicators">
 					<li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -72,9 +73,8 @@
 					</a>
 				</div>
 			</div>
-		</p>
-
-		</div>
+		
+		</div>>
 		
 		<div id="Pied_de_Page">
 		<p><span class="textepiedpage"><a href="http://www.ac-rouen.fr/">Site rectorat</a> - <a href="http://lycees.ac-rouen.fr/queneau"> Site Lycée Raymond Queneau</a> - <a href="http://www.bts-sn-yvetot.fr/">Section BTS SN</a> - 2018
