--- a/Pages/CadreDeVie.html
+++ b/Pages/CadreDeVie.html
@@ -39,7 +39,7 @@
 		<p>
 		Le laboratoire BTS est un lieu exclusivement réservé au personnel membre du BTS. Il y est possible de s'y rendre en dehors des heures de cours, pour travailler, surfer sur internet, ou tout simplement se retrouver. Tout le matériel nécessaire à la bonne formation de l'étudiant est mis à sa disposition. Le bâtiment est divisé en deux zones, une pour les cours et devoirs, une pour les travaux pratiques.<br /><br />
 		</p>	
-		<div id="carousel" class="carousel slide" data-ride="carousel" style="height: -4%">
+		<div id="carousel" class="carousel slide" data-ride="carousel">
 				<!-- Indicateurs -->
 				<ul class="carousel-indicators">
 					<li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -71,10 +71,7 @@
 						<a class="carousel-control-next" href="#carousel" data-slide="next">
 							<span class="carousel-control-next-icon"></span>
 					</a>
-				</div>
 			</div>
-		
-		</div>>
 		
 		<div id="Pied_de_Page">
 		<p><span class="textepiedpage"><a href="http://www.ac-rouen.fr/">Site rectorat</a> - <a href="http://lycees.ac-rouen.fr/queneau"> Site Lycée Raymond Queneau</a> - <a href="http://www.bts-sn-yvetot.fr/">Section BTS SN</a> - 2018
