--- a/Pages/Presentation.html
+++ b/Pages/Presentation.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Présentation Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
-		
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	</head>
 	
 	<body>
@@ -99,7 +99,8 @@
 			<li>Les systèmes de contrôle/commande permettant la commande et  le  suivi de procédés  industriels.</li>
 			<li>Les  systèmes de  traitement de  communication (voix,  données,  images)  permettant  le  transfert dans une architecture  informatique.</li>
 		</ul>
-		<p><img class="ecart" src="../photos/systeme1.jpg" alt="photo de systeme" />&nbsp;<img class="ecart" src="../photos/systeme2.jpg" alt="photo de systeme" /><img class="ecart" src="../photos/systeme3.jpg" alt="photo de systeme" />
+		<p>
+			<img class="ecart" src="../photos/systeme1.jpg" alt="photo de systeme" />&nbsp;<img class="ecart" src="../photos/systeme2.jpg" alt="photo de systeme" /><img class="ecart" src="../photos/systeme3.jpg" alt="photo de systeme" />
 		</p>
 		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">Lieu et horaires de la formation</h2>
 		<p>La  formation  au  BTS  se  déroule  sur  2  ans  avec différentes  phases  (cours,  travaux  pratiques  et dirigés,  stage  de  6  semaines  en  entreprise, projets...). Notre laboratoire dédié ainsi que notre situation  géographique  privilégiée  (avec  desserte SNCF + vikibus) permettent de travailler dans les meilleures conditions.
