--- a/Pages/Localisation.html
+++ b/Pages/Localisation.html
@@ -7,6 +7,7 @@
 		<title>Localisation Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -24,7 +25,7 @@
 				<a href="2ndAnnee.html"><img src="../Images/2ndAnnee1.png" class="boutonMenu" alt="2ème Année" onmouseover="this.src='../Images/2ndAnnee2.png'" onmouseout="this.src='../Images/2ndAnnee1.png'"/></a>
 				<a href="Localisation.html"><img src="../Images/Localisation2.png" class="boutonMenu" alt="Localisation" /></a>
 				<a href="NousJoindre.html"><img src="../Images/NousJoindre1.png" class="boutonMenu" alt="Nous Contacter" onmouseover="this.src='../Images/NousJoindre2.png'" onmouseout="this.src='../Images/NousJoindre1.png'"/></a>
-		<h1><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> Localisation</h1>
+		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> Localisation</h2>
 		  
 		  <p>Le lycée Raymond Queneau est situé en plein coeur de Yvetot, commune de Seine Maritime se trouvant en plein milieu du Pays de Caux.</p>
 		  <p class="images"><img src="../Images/local2.png" alt="image de localisation du lycee" />&nbsp;<img src="../Images/local1.png" alt="image de localisation du lycee" /></p>
