--- a/Pages/NousJoindre.html
+++ b/Pages/NousJoindre.html
@@ -7,6 +7,7 @@
 		<title>Nous Joindre Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap" rel="stylesheet">
 	</head>
 	
 	<body>
