--- a/Pages/Presentation.html
+++ b/Pages/Presentation.html
@@ -7,6 +7,8 @@
 		<title>Présentation Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -44,7 +46,7 @@
 		d'équipements automatisés et/ou informatisés.
 		</p>
 		<br>
-		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">   qualités associées :</h2>
+		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">   Qualités associées :</h2>
 		
 		<ul>
 			<li>Culture technologique</li>
@@ -85,7 +87,7 @@
 			<li>Prépa ATS</li>
 		</ul>
 		<br>
-		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">   systèmes utilisés :</h2>
+		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">   Systèmes utilisés :</h2>
 		
 		<p>La formation au BTS se déroule sur 2 ans avec différentes phases :
 		( cours, travaux pratiques et dirigés, stage de 6 semaines en entreprise, projets...).
@@ -102,7 +104,7 @@
 		<p>
 			<img class="ecart" src="../photos/systeme1.jpg" alt="photo de systeme" />&nbsp;<img class="ecart" src="../photos/systeme2.jpg" alt="photo de systeme" /><img class="ecart" src="../photos/systeme3.jpg" alt="photo de systeme" />
 		</p>
-		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">Lieu et horaires de la formation</h2>
+		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">  Lieu et horaires de la formation</h2>
 		<p>La  formation  au  BTS  se  déroule  sur  2  ans  avec différentes  phases  (cours,  travaux  pratiques  et dirigés,  stage  de  6  semaines  en  entreprise, projets...). Notre laboratoire dédié ainsi que notre situation  géographique  privilégiée  (avec  desserte SNCF + vikibus) permettent de travailler dans les meilleures conditions.
 		</p>
 		<br>
