--- a/Pages/NousJoindre.html
+++ b/Pages/NousJoindre.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Nous Joindre Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
-		
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 	</head>
 	
 	<body>
@@ -17,12 +17,38 @@
 		</div>
 		
 		<div id="corps">
-				<a href="../index.html"><img src="../Images/Accueil1.png" class="boutonMenu" alt="accueil" onmouseover="this.src='../Images/Accueil2.png'" onmouseout="this.src='../Images/Accueil1.png'"/></a>
-				<a href="Presentation.html"><img src="../Images/Presentation1.png" class="boutonMenu" alt="Présentation" onmouseover="this.src='../Images/Presentation2.png'" onmouseout="this.src='../Images/Presentation1.png'"/></a>
-				<a href="CadreDeVie.html"><img src="../Images/CadreDeVie1.png" class="boutonMenu" alt="Cadre de Vie" onmouseover="this.src='../Images/CadreDeVie2.png'" onmouseout="this.src='../Images/CadreDeVie1.png'"/></a>
-				<a href="1erAnnee.html"><img src="../Images/1erAnnee1.png" class="boutonMenu" alt="1ère Année" onmouseover="this.src='../Images/1erAnnee2.png'" onmouseout="this.src='../Images/1erAnnee1.png'"/></a>
-				<a href="2ndAnnee.html"><img src="../Images/2ndAnnee1.png" class="boutonMenu" alt="2ème Année" onmouseover="this.src='../Images/2ndAnnee2.png'" onmouseout="this.src='../Images/2ndAnnee1.png'"/></a>
-				<a href="Localisation.html"><img src="../Images/Localisation1.png" class="boutonMenu" alt="Localisation" onmouseover="this.src='../Images/Localisation2.png'" onmouseout="this.src='../Images/Localisation1.png'"/></a>
+		<!--Debut de la navbar-->
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+			<!-- Brand -->
+			<a class="navbar-brand" href="../index.html">Accueil</a>
+	
+			<!-- Toggler/collapsibe Button -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+	
+			<!-- Navbar links -->
+			<div class="collapse navbar-collapse" id="collapsibleNavbar">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="Presentation.html">Présentation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="1erAnnee.html">1ère Année</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="2ndAnnee.html">2ème Année</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="Localisation.html">Localisation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="NousJoindre.html">Nous joindre</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<!--Fin de la navbar-->
 				<a href="NousJoindre.html"><img src="../Images/NousJoindre2.png" class="boutonMenu" alt="Nous Contacter" /></a>
 		
 			<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> Administration</h2>
@@ -42,15 +68,53 @@
 			  <h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> Professeurs</h2>
 			  <p>M. Pisak<br />
 			  E-mail : <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;sebastien&#46;pisak&#64;ac&#45;normanide&#46;fr">sebastien&#46;pisak&#64;ac&#45;normanide&#46;fr</a><br />
-			  M. Voisin<br/>
-			  E-mail : <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;jean-christophe&#46;voisin&#64;ac&#45;normanide&#46;fr">jean-christophe&#46;voisin&#64;ac&#45;normanide&#46;fr</a><br />
-			  M. Beriouche<br/>
-			  E-mail : <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;achour&#46;beriouche&#64;ac&#45;normanide&#46;fr">achour&#46;beriouche&#64;ac&#45;normanide&#46;fr</a><br />
-			  M. Trufley<br/>
-			  E-mail : <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;matthieu&#46;trufley&#64;ac&#45;normanide&#46;fr">matthieu&#46;trufley&#64;ac&#45;normanide&#46;fr</a><br /><br />
-			   </p>
 		</div>
 		
+		<div class="container">
+            <h1>Cartes</h1>
+            <h2>Card-group :</h2>
+            <div class="card-deck">
+                <div class="card">
+					<div class="card-header">Professeur d'Informatique et Réseaux</div>
+                    <div class="card-body">
+                        <h3 class="card-title">M. Beriouche</h5>
+                        <p class="card-text"> <a href="mailto:achour.beriouche@ac-normandie.fr">achour.beriouche@ac-normandie.fr</a></p>
+					</div>
+					<div class="card-footer"></div>
+				</div>
+				
+                <div class="card">
+                    <div class="card-header">Professeur d'Informatique et Réseaux</div>
+                    <div class="card-body">
+                        <h3 class="card-title">M. Trufley</h5>
+                        <p class="card-text"> <a href="mailto:matthieu.truffley@ac-normandie.fr">matthieu.truffley@ac-normandie.fr</a></p>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+            </div>
+			
+            <div class="card-deck">
+                <div class="card">
+                    <div class="card-header">Professeur d'Informatique et Réseaux</div>
+                    <div class="card-body">
+                        <h3 class="card-title">M.Pisak</h5>
+                        <p class="card-text"> <a href="mailto:sebastien.pisak@ac-normandie.fr">sebastien.pisak@ac-normandie.fr </a></p>
+                    </div>
+                    <div class="card-footer"></div>
+				</div>
+				
+                <div class="card">
+                    <div class="card-header">Professeur d'Electronique et Communicants</div>
+                    <div class="card-body">
+                        <h3 class="card-title">M. Voisin</h5>
+                        <p class="card-text"> <a href="mailto:jean-christophe.voisin@ac-normandie.fr">jean-christophe-voisin@ac-normandie.fr</a></p>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+            </div>
+		</div>
+		
+    </body>
 		<div id="Pied_de_Page">
 		<p><span class="textepiedpage"><a href="http://www.ac-rouen.fr/">Site rectorat</a> - <a href="http://lycees.ac-rouen.fr/queneau"> Site Lycée Raymond Queneau</a> - <a href="http://www.bts-sn-yvetot.fr/">Section BTS SN</a> - 2018
 					<!--<?php
@@ -58,7 +122,15 @@
 			?>-->
 		</span></p>
 		</div>
-		
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous">
+	</script>
+	<!-- Latest compiled and minified Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+		crossorigin="anonymous">
+	</script>
 	</body>
 	
 </html>
