--- a/Pages/Presentation.html
+++ b/Pages/Presentation.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Présentation Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
-		
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 	</head>
 	
 	<body>
@@ -17,13 +17,38 @@
 		</div>
 		
 		<div id="corps">
-				<a href="../index.html"><img src="../Images/Accueil1.png" class="boutonMenu" alt="accueil" onmouseover="this.src='../Images/Accueil2.png'" onmouseout="this.src='../Images/Accueil1.png'"/></a>
-				<a href="Presentation.html"><img src="../Images/Presentation2.png" class="boutonMenu" alt="Presentation" /></a>
-				<a href="CadreDeVie.html"><img src="../Images/CadreDeVie1.png" class="boutonMenu" alt="Cadre de Vie" onmouseover="this.src='../Images/CadreDeVie2.png'" onmouseout="this.src='../Images/CadreDeVie1.png'"/></a>
-				<a href="1erAnnee.html"><img src="../Images/1erAnnee1.png" class="boutonMenu" alt="1ère Annee" onmouseover="this.src='../Images/1erAnnee2.png'" onmouseout="this.src='../Images/1erAnnee1.png'"/></a>
-				<a href="2ndAnnee.html"><img src="../Images/2ndAnnee1.png" class="boutonMenu" alt="2ème Annee" onmouseover="this.src='../Images/2ndAnnee2.png'" onmouseout="this.src='../Images/2ndAnnee1.png'"/></a>
-				<a href="Localisation.html"><img src="../Images/Localisation1.png" class="boutonMenu" alt="Localisation" onmouseover="this.src='../Images/Localisation2.png'" onmouseout="this.src='../Images/Localisation1.png'"/></a>
-				<a href="NousJoindre.html"><img src="../Images/NousJoindre1.png" class="boutonMenu" alt="Nous Contacter" onmouseover="this.src='../Images/NousJoindre2.png'" onmouseout="this.src='../Images/NousJoindre1.png'"/></a>
+		<!--Debut de la navbar-->
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+			<!-- Brand -->
+			<a class="navbar-brand" href="../index.html">Accueil</a>
+	
+			<!-- Toggler/collapsibe Button -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+	
+			<!-- Navbar links -->
+			<div class="collapse navbar-collapse" id="collapsibleNavbar">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="Presentation.html">Présentation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="1erAnnee.html">1ère Année</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="2ndAnnee.html">2ème Année</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="Localisation.html">Localisation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="NousJoindre.html">Nous joindre</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<!--Fin de la navbar-->
 				
 		<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo">   Caractéristiques principales :</h2>
 		<div><p>Le BTS SN forme des Technicien(ne)s Supérieur(e)s polyvalent(e)s dans tous les domaines liés à l'informatique.</p>		
@@ -115,7 +140,15 @@
 		</span></p> 
 		
 		</div>
-		
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous">
+	</script>
+	<!-- Latest compiled and minified Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+		crossorigin="anonymous">
+	</script>
 	</body>
 	
 </html>
