--- a/index.html
+++ b/index.html
@@ -1,49 +1,92 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Accueil Section BTS SN</title>
-		<link rel="stylesheet" media="screen" type="text/css" href="CSS/site.css">
-	</head>	
-	<body>	
-		<div id="entete">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Accueil Section BTS SN</title>
+	<link rel="stylesheet" media="screen" type="text/css" href="CSS/site.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+</head>
+
+<body>
+	<div id="entete">
 		<img class="gauche" src="Images/Logo.jpg" height="195" alt="monLogo">
 		<img class="droite" src="Images/Logo2.png" height="195" alt="logo2">
-		</div>		
-		<div id="corps">
-				<a href="index.html"><img src="Images/Accueil2.png" class="boutonMenu" alt="accueil" /></a>
-				<a href="Pages/Presentation.html"><img src="Images/Presentation1.png" class="boutonMenu" alt="Présentation" onmouseover="this.src='Images/Presentation2.png'" onmouseout="this.src='Images/Presentation1.png'" /></a>
-				<a href="Pages/CadreDeVie.html"><img src="Images/CadreDeVie1.png" class="boutonMenu" alt="Cadre de Vie" onmouseover="this.src='Images/CadreDeVie2.png'" onmouseout="this.src='Images/CadreDeVie1.png'"/></a>
-				<a href="Pages/1erAnnee.html"><img src="Images/1erAnnee1.png" class="boutonMenu" alt="1ère Année" onmouseover="this.src='Images/1erAnnee2.png'" onmouseout="this.src='Images/1erAnnee1.png'"/></a>
-				<a href="Pages/2ndAnnee.html"><img src="Images/2ndAnnee1.png" class="boutonMenu" alt="2ème Année" onmouseover="this.src='Images/2ndAnnee2.png'" onmouseout="this.src='Images/2ndAnnee1.png'"/></a>
-				<a href="Pages/Localisation.html"><img src="Images/Localisation1.png" class="boutonMenu" alt="Localisation" onmouseover="this.src='Images/Localisation2.png'" onmouseout="this.src='Images/Localisation1.png'"/></a>
-				<a href="Pages/NousJoindre.html"><img src="Images/NousJoindre1.png" class="boutonMenu" alt="Nous Contacter" onmouseover="this.src='Images/NousJoindre2.png'" onmouseout="this.src='Images/NousJoindre1.png'"/></a>
-		<br />
-		<br />
-		<h2><img src="Images/puce.png" class="lower" height="20" alt="monLogo"> Le site de la section SN du lyc&eacute;e Raymond Queneau d'Yvetot!</h2>
-		<p>Bienvenue sur le site internet de la section BTS SN (système numérique) du lyc&eacute;e Raymond Queneau d'Yvetot. 
-		<br />
-			Ce site a pour but de vous renseigner sur la section, le mat&eacute;riel, les horaires, etc. 
-			Il a &eacute;t&eacute; cr&eacute;e  dans un but &eacute;ducatif pour familiariser les &eacute;l&egrave;ves de la section &agrave; la cr&eacute;ation de sites web.
+	</div>
+	<div id="corps">
+		<!--Debut de la navbar-->
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+			<!-- Brand -->
+			<a class="navbar-brand" href="index.html">Accueil</a>
+
+			<!-- Toggler/collapsibe Button -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<!-- Navbar links -->
+			<div class="collapse navbar-collapse" id="collapsibleNavbar">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="Pages/Presentation.html">Présentation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="Pages/1erAnnee.html">1ère Année</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="Pages/2ndAnnee.html">2ème Année</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="Pages/Localisation.html">Localisation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="Pages/NousJoindre.html">Nous joindre</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<!--Fin de la navbar-->
+
+
+		<h2><img src="Images/puce.png" class="lower" height="20" alt="monLogo"> Le site de la section SN du lyc&eacute;e
+			Raymond Queneau d'Yvetot!</h2>
+		<p>Bienvenue sur le site internet de la section BTS SN (système numérique) du lyc&eacute;e Raymond Queneau
+			d'Yvetot.
+			<br />
+			Ce site a pour but de vous renseigner sur la section, le mat&eacute;riel, les horaires, etc.
+			Il a &eacute;t&eacute; cr&eacute;e dans un but &eacute;ducatif pour familiariser les &eacute;l&egrave;ves de
+			la section &agrave; la cr&eacute;ation de sites web.
 		</p>
 		<p class="info">
-		<!--<?php
+			<!--<?php
 			include_once ('compteur/compteur.html');
 			echo 'Nombre de pages visitées sur ce site : '.$compteur.'<br/>';
 			echo 'Votre adresse IP : '.$_SERVER['REMOTE_ADDR'];
 		?>-->
-		</p>	
-		</div>	
+		</p>
+	</div>
 
-		<div id="Pied_de_Page">
-		<p><span class="textepiedpage"><a href="http://www.ac-rouen.fr/">Site rectorat</a> - <a href="http://lycees.ac-rouen.fr/queneau"> Site Lycée Raymond Queneau</a> - <a href="http://www.bts-sn-yvetot.fr/">Section BTS SN</a> - 2018</span></p>
+	<div id="Pied_de_Page">
+		<p><span class="textepiedpage"><a href="http://www.ac-rouen.fr/">Site rectorat</a> - <a
+					href="http://lycees.ac-rouen.fr/queneau"> Site Lycée Raymond Queneau</a> - <a
+					href="http://www.bts-sn-yvetot.fr/">Section BTS SN</a> - 2018</span></p>
 		<p>
-    		<a href="https://jigsaw.w3.org/css-validator/check/referer">
-				<img style="border:0;width:88px;height:31px"
-				src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-				alt="CSS Valide !" />
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+					alt="CSS Valide !" />
 			</a>
 		</p>
-		</div>	
-	</body>	
+	</div>
+
+	<!-- Latest compiled and minified JQuery -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+		</script>
+	<!-- Latest compiled and minified Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+		</script>
+
+</body>
+
 </html>
