--- a/Pages/NousJoindre.html
+++ b/Pages/NousJoindre.html
@@ -71,8 +71,42 @@
 		</div>
 		
 		<div class="container">
-            <h1>Cartes</h1>
-            <h2>Card-group :</h2>
+            <h2>Addministration</h2>
+            <div class="card-deck">
+                <div class="card">
+                    <div class="card-header">Administration</div>
+                    <div class="card-body">
+						<h3 class="card-title">Rue du Dr Zamenhof</h5>
+							
+							<p class="card-text">76194 Yvetot Cedex</p>
+							<p class="card-text"><a href="tel:+330235951266">Tél. : 02 35 95 12 66</a></p>
+							<p class="card-text"><a href="tel:+330235953225">Fax : 02 35 95 32 25</a></p>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                </div>
+            </div>
+        </div>
+
+		<div class="container">
+            <h2>Directeur délégué aux formations professionnelles et technologiques (DDFPT)</h2>
+            <div class="card-deck">
+                <div class="card">
+                    <div class="card-header">DDFPT</div>
+                    <div class="card-body">
+                        <h3 class="card-title">M. Leduc Christophe</h5>
+							<p class="card-text"><a href="mailto:christophe.leduc@ac-normandie.fr">christophe.leduc@ac-normandie.fr</p>
+							<p class="card-text"><a href="tel:+330235563905">Tel : 02 35 56 39 05</a></p>
+							<p class="card-text"><a href="tel:+330235958704">Fax : 02 35 95 87 04</a></p>
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
+                </div>
+            </div>
+        </div>
+
+		<div class="container">
+            <h2>Professeurs</h2>
             <div class="card-deck">
                 <div class="card">
 					<div class="card-header">Professeur d'Informatique et Réseaux</div>
