--- a/Pages/NousJoindre.html
+++ b/Pages/NousJoindre.html
@@ -6,12 +6,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Nous Joindre Section BTS SN</title>
 		<link rel="stylesheet" media="screen" type="text/css" href="../CSS/site.css">
-<<<<<<< HEAD
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-=======
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap" rel="stylesheet">
->>>>>>> 87d58a9ade65342e5c58412316a851b09c710f14
 	</head>
 	
 	<body>
@@ -54,29 +51,10 @@
 			</div>
 		</nav>
 		<!--Fin de la navbar-->
-				<a href="NousJoindre.html"><img src="../Images/NousJoindre2.png" class="boutonMenu" alt="Nous Contacter" /></a>
-		
-			<h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> Administration</h2>
-			  <p> Rue du Dr. Zamenhof<br />BP 143<br />76194 Yvetot cedex</p>
-			  <p>Tél. : 02 35 95 12 66</p>
-			  <p>Fax : 02 35 95 32 25</p>
-			  <p>E-mail : <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;ce&#46;0762880t&#64;ac&#45;rouen&#46;fr">ce&#46;0762880t&#64;ac&#45;rouen&#46;fr</a>
-			  </p>
-			  
-			  <h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> directeurs d&eacute;l&eacute;gu&eacute;s aux formations professionnelles et technologiques (DDFPT)</h2>
-			  <p>Monsieur LEDUC Christophe<br />
-			  Tél. : 02 35 56 39 05<br />
-			  Fax : 02 35 95 87 04<br />
-			  E-mail : <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;jean-luc&#46;joriaux&#64;ac&#45;rouen&#46;fr">christophe.leduc&#64;ac&#45;normandie&#46;fr</a>
-			  </p>
-			  
-			  <h2><img class="puce" src="../Images/puce.png" height="20" alt="monLogo"> Professeurs</h2>
-			  <p>M. Pisak<br />
-			  E-mail : <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;sebastien&#46;pisak&#64;ac&#45;normanide&#46;fr">sebastien&#46;pisak&#64;ac&#45;normanide&#46;fr</a><br />
-		</div>
+
 		
 		<div class="container">
-            <h2>Addministration</h2>
+            <h2>Administration</h2>
             <div class="card-deck">
                 <div class="card">
                     <div class="card-header">Administration</div>
