--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Accueil Section BTS SN</title>
 	<link rel="stylesheet" media="screen" type="text/css" href="CSS/site.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body>
