ajout de la page cadre de vie (supprimer)

--- a/Pages/Presentation.html
+++ b/Pages/Presentation.html
@@ -44,6 +44,9 @@
 						<a class="nav-link" href="2ndAnnee.html">2ème Année</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="Pages/CadreDeVie.html">Cadre de vie</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="Localisation.html">Localisation</a>
 					</li>
 					<li class="nav-item">
