--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 						<a class="nav-link" href="Pages/2ndAnnee.html">2ème Année</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="Pages/CadreDeVie.html">Cadre de vie</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="Pages/Localisation.html">Localisation</a>
 					</li>
 					<li class="nav-item">
